# rinha

./: .env  Cargo.toml  Dockerfile  docker-compose.yml  envoy.yaml  sqlx-data.json
configuration/: base.yaml
migrations/: 20240303155935_clients.sql  20240303164639_client_limit.sql  20240303180347_timestamp_transaction.sql  20240303200040_optimize_transactions.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/domain/: cliente.rs  mod.rs  transacao.rs  transacao_descricao.rs  transacao_tipo.rs
src/routes/: extrato.rs  mod.rs  transacoes.rs
