[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "rinha"

[dev-dependencies]
claims = "0.7"
tokio = { version = "1", features = ["rt", "macros"] }

[dependencies]
actix-web = "4"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
config = "0.13"
dotenv = "0.15.0"
thiserror = "1.0"
serde-aux = "4"
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.6" 
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]